--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Metrónomo completo</title>
+  <title>Metrónomo Jaramillo</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="theme-black">
