--- a/index.html
+++ b/index.html
@@ -14,33 +14,38 @@
     <div class="knob-wrapper">
       <svg id="knob" viewBox="0 0 200 200">
         <circle class="track" cx="100" cy="100" r="90" />
-        <line id="needle" x1="100" y1="100" x2="100" y2="20" />
-        <text id="bpm-label" x="100" y="115" text-anchor="middle">100</text>
+        <line   id="needle" x1="100" y1="100" x2="100" y2="20" />
+        <text   id="bpm-label" x="100" y="115" text-anchor="middle">100</text>
       </svg>
     </div>
 
     <!-- Compases -->
     <h3>Compás</h3>
     <div class="meter-grid">
+      <!-- 1/4 NUEVO -->
+      <button class="meter-btn" data-meter="1_4_1">1/4</button>
+
+      <!-- /4 -->
       <button class="meter-btn" data-meter="2_4_2">2/4</button>
       <button class="meter-btn" data-meter="3_4_3">3/4</button>
       <button class="meter-btn" data-meter="4_4_4">4/4</button>
-      <button class="meter-btn" data-meter="5_4_3_2">5/4&nbsp;3+2</button>
-      <button class="meter-btn" data-meter="5_4_2_3">5/4&nbsp;2+3</button>
-      <button class="meter-btn" data-meter="7_4_4_3">7/4&nbsp;4+3</button>
-      <button class="meter-btn" data-meter="7_4_3_4">7/4&nbsp;3+4</button>
+      <button class="meter-btn" data-meter="5_4_3_2">5/4 3+2</button>
+      <button class="meter-btn" data-meter="5_4_2_3">5/4 2+3</button>
+      <button class="meter-btn" data-meter="7_4_4_3">7/4 4+3</button>
+      <button class="meter-btn" data-meter="7_4_3_4">7/4 3+4</button>
 
-      <button class="meter-btn" data-meter="5_8_3_2">5/8&nbsp;3+2</button>
-      <button class="meter-btn" data-meter="5_8_2_3">5/8&nbsp;2+3</button>
-      <button class="meter-btn" data-meter="7_8_4_3">7/8&nbsp;4+3</button>
-      <button class="meter-btn" data-meter="7_8_3_4">7/8&nbsp;3+4</button>
+      <!-- /8 -->
+      <button class="meter-btn" data-meter="5_8_3_2">5/8 3+2</button>
+      <button class="meter-btn" data-meter="5_8_2_3">5/8 2+3</button>
+      <button class="meter-btn" data-meter="7_8_4_3">7/8 4+3</button>
+      <button class="meter-btn" data-meter="7_8_3_4">7/8 3+4</button>
+      <button class="meter-btn" data-meter="11_8_4_4_3_3">11/8 4+4+3+3</button>
+      <button class="meter-btn" data-meter="11_8_4_3_3_4">11/8 4+3+3+4</button>
+      <button class="meter-btn" data-meter="11_8_3_3_4_4">11/8 3+3+4+4</button>
 
-      <button class="meter-btn" data-meter="11_8_4_4_3_3">11/8&nbsp;4+4+3+3</button>
-      <button class="meter-btn" data-meter="11_8_4_3_3_4">11/8&nbsp;4+3+3+4</button>
-      <button class="meter-btn" data-meter="11_8_3_3_4_4">11/8&nbsp;3+3+4+4</button>
-
-      <button class="meter-btn" data-meter="2_2_clave_3_2">Clave&nbsp;3-2</button>
-      <button class="meter-btn" data-meter="2_2_clave_2_3">Clave&nbsp;2-3</button>
+      <!-- Clave -->
+      <button class="meter-btn" data-meter="2_2_clave_3_2">Clave 3-2</button>
+      <button class="meter-btn" data-meter="2_2_clave_2_3">Clave 2-3</button>
     </div>
 
     <!-- Subdivisiones -->
