--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- Knob --------------------------------------------------->
     <div class="knob-wrapper">
       <svg id="knob" viewBox="0 0 200 200">
-        <circle class="track" cx="100" cy="100" r="90"/>
-        <line   id="needle" x1="100" y1="100" x2="100" y2="20"/>
+        <circle class="track" cx="100" cy="100" r="90" />
+        <line   id="needle" x1="100" y1="100" x2="100" y2="20" />
         <text   id="bpm-label" x="100" y="115" text-anchor="middle">100</text>
       </svg>
     </div>
@@ -27,21 +27,16 @@
       <button class="meter-btn" data-meter="2_4_2">2/4</button>
       <button class="meter-btn" data-meter="3_4_3">3/4</button>
       <button class="meter-btn" data-meter="4_4_4">4/4</button>
-      <button class="meter-btn" data-meter="5_4_3_2">5/4 3+2</button>
-      <button class="meter-btn" data-meter="5_4_2_3">5/4 2+3</button>
-      <button class="meter-btn" data-meter="7_4_4_3">7/4 4+3</button>
-      <button class="meter-btn" data-meter="7_4_3_4">7/4 3+4</button>
 
-      <button class="meter-btn" data-meter="5_8_3_2">5/8 3+2</button>
-      <button class="meter-btn" data-meter="5_8_2_3">5/8 2+3</button>
-      <button class="meter-btn" data-meter="7_8_4_3">7/8 4+3</button>
-      <button class="meter-btn" data-meter="7_8_3_4">7/8 3+4</button>
-      <button class="meter-btn" data-meter="11_8_4_4_3_3">11/8 4+4+3+3</button>
-      <button class="meter-btn" data-meter="11_8_4_3_3_4">11/8 4+3+3+4</button>
-      <button class="meter-btn" data-meter="11_8_3_3_4_4">11/8 3+3+4+4</button>
+      <button class="meter-btn" data-meter="5_4_3_2">5/4&nbsp;3+2</button>
+      <button class="meter-btn" data-meter="7_4_4_3">7/4&nbsp;4+3</button>
 
-      <button class="meter-btn" data-meter="2_2_clave_3_2">Clave 3-2</button>
-      <button class="meter-btn" data-meter="2_2_clave_2_3">Clave 2-3</button>
+      <button class="meter-btn" data-meter="5_8_3_2">5/8&nbsp;3+2</button>
+      <button class="meter-btn" data-meter="7_8_4_3">7/8&nbsp;4+3</button>
+
+      <button class="meter-btn" data-meter="11_8_4_4_3_3">11/8&nbsp;4+4+3+3</button>
+
+      <button class="meter-btn" data-meter="2_2_clave_3_2">Clave</button>
     </div>
 
     <!-- Subdivisiones ----------------------------------------->
@@ -52,17 +47,15 @@
       <button class="sub-btn" id="sub-swing-btn">Swing</button>
     </div>
 
-    <!-- Skins -------------------------------------------------->
+    <!-- Temas -------------------------------------------------->
     <h3>Tema</h3>
     <div class="themes">
       <button data-theme="theme-black">Negro</button>
       <button data-theme="theme-green">Verde</button>
-      <button data-theme="theme-yellow">Amarillo</button>
-      <button data-theme="theme-orange">Naranja</button>
       <button data-theme="theme-red">Rojo</button>
     </div>
 
-    <!-- Luz / Visualizador ------------------------------------>
+    <!-- Luz + visualizador ------------------------------------>
     <div class="light-bar"><div class="light"></div></div>
     <div id="visualizer"></div>
 
